--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
-輕鐵到站時間：
-呢個 App 為你提供香港輕鐵嘅實時到站資訊，方便你計劃行程。揀選你想查詢嘅車站，即刻睇到每條路線嘅到站時間、目的地同月台號碼。App 仲會根據你嘅位置自動搵出最近嘅車站，並每 20 秒更新一次資料，確保你有最新嘅資訊。支援簡單易用嘅介面，無論係日常通勤定臨時出行，都係你嘅最佳助手！
+<p>A.輕鐵到站時間：</p>
+<br>呢個 App 為你提供香港輕鐵嘅實時到站資訊，方便你計劃行程。揀選你想查詢嘅車站，即刻睇到每條路線嘅到站時間、目的地同月台號碼。App 仲會根據你嘅位置自動搵出最近嘅車站，並每 20 秒更新一次資料，確保你有最新嘅資訊。支援簡單易用嘅介面，無論係日常通勤定臨時出行，都係你嘅最佳助手！
 
-主要功能：
-1.沒有任何廣告
-2.實時顯示輕鐵到站時間同月台資訊
-3.自動定位最近車站
-4.每 20 秒自動更新資料
-5.支援所有輕鐵車站查詢
+<p>主要功能：</p>
+<br>1.沒有任何廣告
+<br>2.實時顯示輕鐵到站時間同月台資訊
+<br>3.自動定位最近車站
+<br>4.每 20 秒自動更新資料
+<br>5.支援所有輕鐵車站查詢
+
+
+<p>B.我哋收集嘅資料</p>
+<br>為咗提供更好嘅服務，本應用可能會收集以下資料：
+
+<p>位置資料：</p>
+<br>當你使用「定位」功能時，我哋會收集你嘅地理位置（經緯度），用來搵出你附近嘅輕鐵站。呢啲資料只喺你主動點擊定位按鈕時收集，並喺完成定位後停止。
+<br>使用資料：
+<br>我哋可能會收集你喺應用內嘅操作記錄，例如你揀咗邊個車站查詢到站時間，呢啲資料用來改善應用功能同用戶體驗。
+<br>設備資料：
+<br>我哋可能會收集你設備嘅基本資訊，例如設備型號、作業系統版本同應用版本號，用來確保應用喺唔同設備上正常運行。
+<br>捐款相關資料（如適用）：
+<br>如果你透過應用內購買（In-App Purchase）捐款，Apple 會處理支付流程，我哋唔會直接收集你嘅付款資訊（例如信用卡號）。但我哋可能會記錄捐款嘅交易 ID 同金額，用來確認交易狀態。
+<p>2. 我哋點樣使用你嘅資料</p>
+<br>我哋收集嘅資料會用於以下目的：
+
+<br>提供服務：用你嘅位置資料搵最近嘅輕鐵站，並顯示實時到站時間。
+<br>改善應用：分析使用資料，優化應用功能同介面。
+<br>交易處理：確認同記錄你嘅捐款交易（如果有）。
+<br>技術支持：用設備資料解決應用運行問題。
+<p>3. 資料分享同披露</p>
+<br>我哋好重視你嘅隱私，除非有以下情況，否則唔會同第三方分享你嘅個人資料：
+
+<br>法律要求：如果法律或法庭命令要求，我哋可能需要披露你嘅資料。
+<br>香港政府數據一站通：提供輕鐵到站時間嘅 API，我哋唔會喺呢度傳送你嘅個人資料，只會送車站 ID。
+<br>匿名化數據：我哋可能會將使用資料匿名化後用於統計分析，呢啲資料唔會同你嘅身份連繫起來。
+<p>4. 資料儲存同安全</p>
+<br>儲存位置：你嘅資料會儲存喺你嘅設備上（例如位置偏好），而交易記錄可能儲存喺我哋嘅安全服務器上。
+<br>安全措施：我哋用咗行業標準嘅加密技術（例如 SSL）保護資料傳輸，並限制內部訪問權限。
+<br>保留期限：我哋只會保留必要嘅資料，例如位置資料喺定位後即時刪除，交易記錄保留 1 年後銷毀，除非法律另有要求。
+<p>5. 你嘅權利</p>
+<br>你有以下權利控制你嘅個人資料：
+
+<br>訪問同修改：你可以喺應用內查看你嘅使用記錄（例如最近查詢嘅車站）。
+<br>拒絕提供：你可以選擇唔提供位置資料（唔用定位功能），但可能影響部分功能。
+<br>聯絡我哋：如果想查閱、更改或刪除你嘅資料，請電郵我哋：[你的電郵]。
+<p>6. 第三方連結</p>
+<br>本應用可能包含第三方連結（例如捐款頁面嘅 URL）。點擊呢啲連結會離開本應用，我哋唔負責第三方網站嘅隱私做法，建議你閱讀佢哋嘅隱私政策。
+
+<p>7. 政策更新</p>
+<br>我哋可能會唔時更新呢個隱私權政策。新版本會喺應用內或我哋嘅網站 https://lrt_hk.github.io/ 公佈，並喺生效日期後生效。
